--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,10 +1,20 @@
+html {
+    height: 100%;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgb(83, 83, 83);
     color: rgb(203, 238, 238);
+    height: 100%;
+    width: 100%;
+    min-width: 1000px;
+    width: auto !important;
+    min-height: 600px;
+    width: auto !important;
 }
 
-h1 {
+h1, h2, h3 {
     margin: 0;
     text-shadow: 2px 2px 2px rgb(37, 49, 49);
 }
@@ -13,17 +23,47 @@ p {
     text-shadow: 1px 1px 1px rgb(37, 49, 49);
 }
 
-
 .content-box {
     outline: rgb(60, 77, 77) ridge 2px;
+    margin: 10px;
 }
 
-.menu td h1 {
-    padding: 5px;
+#content-head, #content-body {
+    width: 97%;
+}
+
+.container {
+    height: 100%;
+    width: 100%;
+}
+
+.column {
+    display: inline-block;
+    vertical-align: top;
+    height: 95%;
+}
+
+.column > .content-box {
+    height: 100%;
+}
+
+#main-panel {
+    width: 600px;
+}
+
+.sidebar {
+    width: 200px;
+}
+
+.menu h1 {
     padding-right: 10px;
 }
 
 .menu td {
+    padding-right: 10px;
+}
+
+.content-box > * {
     padding: 5px;
 }
 
@@ -34,5 +74,4 @@ a {
 
 a:hover {
     color: rgb(178, 204, 204);
-
 }
